--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/healthDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=9050
+spring.security.user.password=0987
+#spring.security.filter.order=10
